--- a/src/components/Info/styles.module.scss
+++ b/src/components/Info/styles.module.scss
@@ -44,9 +44,9 @@
 .MainLanguage {
     text-align: center;
     border-radius: 100px;
-    padding: 3px 4px;
-    width: 62px;
-    height: 24px;
+    padding: 5px 10px;
+    min-width: 62px;
+    min-height: 24px;
     background: rgba(0, 0, 0, 0.08);
 }
 
